// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button component Should renders Button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0FA858",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 20,
      "paddingTop": 20,
      "shadowColor": "#171717",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
        },
        Array [
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 18,
          },
          Object {
            "fontSize": 18,
          },
        ],
      ]
    }
  >
    Click it!
  </Text>
</View>
`;

exports[`Test Button component Should renders disabled Button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#848785",
      "borderRadius": 10,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 20,
      "paddingTop": 20,
      "shadowColor": "#171717",
      "shadowOffset": Object {
        "height": 3,
        "width": 3,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
        },
        Array [
          Object {
            "fontFamily": "Lexend-Regular",
            "fontSize": 18,
          },
          Object {
            "fontSize": 18,
          },
        ],
      ]
    }
  >
    Click it!
  </Text>
</View>
`;
